fix layout shift

--- a/packages/ui-toolkit/src/components/atoms/InputStepper/styles/index.css
+++ b/packages/ui-toolkit/src/components/atoms/InputStepper/styles/index.css
@@ -11,8 +11,8 @@
 }
   
 .inputStepper-inputFocused {
-  border: 2px solid var(--gray900);      /* ----- borderNeutral ----- */
-  border-radius: 4px;
+  outline-offset: -1px;
+  outline: 2px solid var(--gray900);
 }
 
 .inputStepper-input {
